--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EggClickerApp</string>
+    <string name="egg_count">%s Eggs</string>
+    <string name="click_me">Click me</string>
 </resources>
